# yolo_scango

./: .gitignore  pyproject.toml
configs/: infer_carparts.yaml  train_carparts_bb.yaml
configs/dataset/: carparts-bb.yaml
scripts/: train_carparts_bb.py
src/utils/: convert_seg_to_bb.py  delete_empty.py  xycwh_xyxy.py
testing/: infer_via_cfg.py  infer_via_ckpt.py  sample_bboxes.py  test_bboxes.py
