[project]
name = "yolo_scango"
version = "0.1.0"
description = "carpart detector"
requires-python = ">=3.8"

dependencies = [
    "yolo @ git+https://github.com/MultimediaTechLab/YOLO.git", # Or just "yolo" if installed from PyPI
    "hydra-core>=1.3",
    "torch",
    "torchvision",
    "torchaudio",
    "lightning>=2.0", # Check yolo package for specific version compatibility
    "opencv-python-headless",
    # Add any other specific dependencies your project might need
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
